--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.scss
@@ -523,3 +523,19 @@ input[type="range"]:focus::-ms-fill-upper {
     }
   }
 }
+
+.container-bar{
+  display: block;
+  width: 100%;
+  height: 20px;
+  color: #000!important;
+  background-color: #f1f1f1!important;
+  border-radius: 16px;
+  .bar-progress{
+    height: 20px;
+    border-radius: 16px;
+    color: #fff!important;
+    background-color: #2196F3!important;
+    padding: 0.01em 16px;
+  }
+}
