add modal tinder

--- a/src/app/bmx/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.html
@@ -21,7 +21,7 @@
   </button>
   <button class="no-print"
     *ngIf="(isMenuActive11 && !bmxClientPageDesignMode) || (isMenuActive16 && !bmxClientPageDesignMode)"
-    style="position: absolute;top: 10px;z-index: 9999999999;outline: none;"
+    style="position: absolute;top: 10px;outline: none;"
     (click)="toggleViewPageModeDesign()" mat-icon-button matTooltip="menu" matTooltipPosition="above">
     <mat-icon class="full-icon" style="font-size: 35px;">menu
     </mat-icon>
