add modal tutorial tinder

--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -1,16 +1,4 @@
-<!-- modal -->
- <!-- <div *ngIf="showModalVideo" id="myModal" class="modal-video">
-    <label class="container-checkbox">Don't show again
-        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
-        <span class="checkmark">&#x2714;</span>        
-    </label>
 
-    <div class="modal-content">
-        <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
-    </div>
-    <span class="close-modal" (click)="showModalVideo=false">Close</span>
-</div> -->
-<!-- end modal -->
 <button *ngIf="openSettings && bmxClientPageOverview" class="cancel" (click)=" replaceBiI_Markers(); openSettings = !openSettings"
     mat-icon-button>
     <mat-icon class="full-icon" style="font-size: 25px;">check_circle</mat-icon>
@@ -19,7 +7,7 @@
     (click)="editTextWithEditor();openSettings = !openSettings;">
     <mat-icon class="full-icon" style="font-size: 25px;">edit</mat-icon>
 </button>
-<div class="paragram-mobile" style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
+<div class="paragram-mobile" *ngIf="currentPage != 2" style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
 <div cdkDrag>
     <ckeditor *ngIf="openSettings && bmxClientPageOverview" id="txtTexto" class="ckeditorcev"
         style="animation: fadeIn 0.5s ease forwards;" [ngModelOptions]="{standalone: true}"
