add fincionalidad voto neutro

--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.scss
@@ -29,13 +29,15 @@
   }
 }
 
-
-
-.positive{
+.negative{
   color: #ed252f;
 }
-.negative{
+.positive{
   color: #00cd38;
+}
+
+.neutral{
+  color: #fffb07fd;
 }
 
 .active-rating-star {
