--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -122,7 +122,8 @@
 
             <div class="tinder-box">
 
-                <div [ngClass]="(!bmxItem.componentText[testNameIndex].vote)?'':(bmxItem.componentText[testNameIndex].vote === 'negative')?'positive':'negative'"
+                <!-- <div [ngClass]="(!bmxItem.componentText[testNameIndex].vote)?'':(bmxItem.componentText[testNameIndex].vote === 'negative')?'positive':'negative'" -->
+                <div [ngClass]="{'neutral':bmxItem.componentText[testNameIndex].vote === 'neutral','positive':bmxItem.componentText[testNameIndex].vote === 'positive','negative':bmxItem.componentText[testNameIndex].vote === 'negative'}"
                     style="font-size: 80px;text-align: center;font-weight: bolder;animation: fadeInRight 1s ease-in 0 1 forwards;">
                     {{( bmxItem.componentText[testNameIndex].nameCandidates)?
                     bmxItem.componentText[testNameIndex].nameCandidates:'TEST NAME'}}
@@ -150,7 +151,7 @@
                         *ngIf="!editSingleTableCells && displaySound">
                         volume_up
                     </mat-icon>
-                    <mat-icon *ngIf="showNeutralIcon" (click)="voteName('positive')" class="full-icon" style="font-size: 65px;color: #fffb07fd;cursor: pointer;">
+                    <mat-icon *ngIf="showNeutralIcon" (click)="voteName('neutral')" class="full-icon" style="font-size: 65px;color: #fffb07fd;cursor: pointer;width: 100%">
                         sentiment_satisfied</mat-icon>
 
                     <mat-icon (click)="voteName('positive')" style="font-size: 65px;color: #00cd38;cursor: pointer;width: 100%"
@@ -186,9 +187,8 @@
         <div style="display: flex;flex-direction: column;align-items: center;">
 
 
-            <div class="tinder-box">
-
-                <div [ngClass]="(!bmxItem.componentText[testNameIndex].vote)?'':(bmxItem.componentText[testNameIndex].vote === 'negative')?'positive':'negative'"
+            <div class="tinder-box">                
+                <div [ngClass]="{'neutral':bmxItem.componentText[testNameIndex].vote === 'neutral','positive':bmxItem.componentText[testNameIndex].vote === 'positive','negative':bmxItem.componentText[testNameIndex].vote === 'negative'}"
                     style="font-size: 50px;text-align: center;font-weight: bolder;animation: fadeInRight 1s ease-in 0 1 forwards;">
                     {{( bmxItem.componentText[testNameIndex].nameCandidates)?
                     bmxItem.componentText[testNameIndex].nameCandidates:'TEST NAME'}}
