new preference score system done for the tinder template

--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -240,7 +240,7 @@
                 matTooltipPosition="right" mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">tune</mat-icon>
             </button>
-            <button (click)="createNewBmxComponent('tinder')" matTooltip="tinder matrix" matTooltipPosition="right"
+            <button (click)="createNewBmxComponent('tinder')" matTooltip="slide by slide" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">local_fire_department</mat-icon>
             </button>
