--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -158,13 +158,17 @@
                         class="full-icon">sentiment_satisfied_alt</mat-icon>
                 </div>
             </div>
-            <mat-icon *ngIf="hasVoted; else noHasVoted" (click)="moveRight(bmxItem.componentText[testNameIndex].nameCandidates)" style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
+            <mat-icon *ngIf="survey==false; else isSurvey" (click)="moveRight(bmxItem.componentText[testNameIndex].nameCandidates)" style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
                 chevron_right
             </mat-icon>
-            <ng-template #noHasVoted><mat-icon style="font-size: 30px;color: grey" class="full-icon">
-                    chevron_right</mat-icon>
+            <ng-template #isSurvey>
+                <mat-icon *ngIf="hasVoted; else noHasVoted" (click)="moveRight(bmxItem.componentText[testNameIndex].nameCandidates)" style="font-size: 30px;color: grey;cursor: pointer;" class="full-icon">
+                    chevron_right
+                </mat-icon>
+                <ng-template #noHasVoted><mat-icon style="font-size: 30px;color: grey" class="full-icon">
+                        chevron_right</mat-icon>
+                </ng-template>
             </ng-template>
-
         </div>
     </div>
 </div>
