--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -81,6 +81,7 @@
         <div style="display: flex; flex-direction: column">
             <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
             <mat-checkbox #showIcon [(ngModel)]="showNeutralIcon">Add Neutral Button</mat-checkbox>
+            <mat-checkbox #changePreferenceScore [(ngModel)]="ranking">Preference Score</mat-checkbox>
         </div>
     </div>
 
@@ -123,7 +124,7 @@
             <div class="tinder-box">
 
                 <!-- <div [ngClass]="(!bmxItem.componentText[testNameIndex].vote)?'':(bmxItem.componentText[testNameIndex].vote === 'negative')?'positive':'negative'" -->
-                <div [ngClass]="{'neutral':bmxItem.componentText[testNameIndex].vote === 'neutral','positive':bmxItem.componentText[testNameIndex].vote === 'positive','negative':bmxItem.componentText[testNameIndex].vote === 'negative'}"
+                <div [ngStyle]="{'color':colorText}"
                     style="font-size: 80px;text-align: center;font-weight: bolder;animation: fadeInRight 1s ease-in 0 1 forwards;">
                     {{( bmxItem.componentText[testNameIndex].nameCandidates)?
                     bmxItem.componentText[testNameIndex].nameCandidates:'TEST NAME'}}
@@ -204,7 +205,7 @@
 
 
             <div class="tinder-box">                
-                <div [ngClass]="{'neutral':bmxItem.componentText[testNameIndex].vote === 'neutral','positive':bmxItem.componentText[testNameIndex].vote === 'positive','negative':bmxItem.componentText[testNameIndex].vote === 'negative'}"
+                <div [ngStyle]="{'color':colorText}"
                     style="font-size: 50px;text-align: center;font-weight: bolder;animation: fadeInRight 1s ease-in 0 1 forwards;">
                     {{( bmxItem.componentText[testNameIndex].nameCandidates)?
                     bmxItem.componentText[testNameIndex].nameCandidates:'TEST NAME'}}
