--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -81,7 +81,7 @@
         <div style="display: flex; flex-direction: column">
             <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
             <mat-checkbox #showIcon [(ngModel)]="showNeutralIcon">Add Neutral Button</mat-checkbox>
-            <mat-checkbox #changePreferenceScore [(ngModel)]="ranking">Preference Score</mat-checkbox>
+            <mat-checkbox #changePreference (click)="changePreferenceScore()" [(ngModel)]="ranking">Preference Score</mat-checkbox>
         </div>
     </div>
 
