--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -293,8 +293,8 @@
         margin: 1% auto;
         margin-left: auto;
         width: 55%;
-        height: auto;
-        // height: 50%;
+        // height: auto;
+        height: 50%;
         overflow-y: scroll;
         overflow-x: hidden;
     }
