--- a/src/app/bmx/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="userRole != 'User'" class="main-container">
 
   <button class="no-print" *ngIf="globalProjectName.length > 0"
-    style="position: absolute;bottom: 30px;z-index: 9999999999;right: 150px;outline: none;"
+    style="position: absolute;bottom: -65px;z-index: 9999999999;right: 183px;outline: none;"
      mat-raised-button  class="project-name-global">
     PROJECT: {{globalProjectName}}
   </button>
@@ -21,7 +21,7 @@
   </button>
   <button class="no-print"
     *ngIf="(isMenuActive11 && !bmxClientPageDesignMode) || (isMenuActive16 && !bmxClientPageDesignMode)"
-    style="position: absolute;bottom: 30px;z-index: 9999999999;right: 30px;outline: none;"
+    style="position: absolute;top: 10px;outline: none;"
     (click)="toggleViewPageModeDesign()" mat-icon-button matTooltip="menu" matTooltipPosition="above">
     <mat-icon class="full-icon" style="font-size: 35px;">menu
     </mat-icon>
@@ -31,7 +31,7 @@
     <!-- LOGO BRANDING 🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭-->
     <div class="logo-badge" style="font-size: 21px;overflow-x: hidden;">
 
-      <img style="width: 253px;margin-left: 18px;" src="./assets/img/bmx/BRANDMATRIX-DASHBOARD-LOGO.svg">
+      <img style="width: 253px;margin-left: 16px;margin-right: 16px;" src="./assets/img/bmx/BRANDMATRIX-DASHBOARD-LOGO.svg">
       <div style="display: flex;flex-direction: column;">
         <!-- <div class="title secondary-text"
                     style="color: #004684; margin-top: 10px;text-align: center;font-family: Arial, Helvetica, sans-serif;font-weight: 800;">
@@ -46,8 +46,8 @@
     <!--🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭🎭 END LOGO BRANDING -->
 
     <div class="welcome">
-        <mat-icon style="color: white;padding: 15px;">account_circle</mat-icon>
-      <div style="color: white; width: 100%;text-align: center;font-family: Arial, Helvetica, sans-serif;font-size: 16px;margin-top: 10px;">
+      <mat-icon style="color: white;padding: 15px;">account_circle</mat-icon>
+      <div class="welcome-role" style="color: white; width: 100%;text-align: center;font-family: Arial, Helvetica, sans-serif;margin-top: 10px;">
         Welcome {{userFullName}}
         <br>
         Role: {{userRole}}
@@ -59,9 +59,9 @@
     <div class="menu" *ngIf="isMainMenuActive">
       <div [ngClass]="(isMenuActive1)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive1')">
         <button mat-icon-button style="margin: 0 20px 0 10px">
-          <mat-icon style="font-size: 40px;">list</mat-icon>
+          <mat-icon style="font-size: 35px;">list</mat-icon>
         </button>
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;">
+        <div class="create-edit-matrix" style=" text-align: end;font-family: Arial, Helvetica, sans-serif">
           {{'Project List'}}
         </div>
       </div>
@@ -94,9 +94,9 @@
       <div *ngIf="!(userRole == 'Director')" [ngClass]="(isMenuActive4)?'menu-active':'menu-item'"
         (click)="toggleMenuActive('isMenuActive8');isMainMenuActive = false ">
         <button mat-icon-button style="margin: 0 20px 0 10px">
-          <mat-icon style="font-size: 40px;">edit</mat-icon>
+          <mat-icon style="font-size: 30px;">edit</mat-icon>
         </button>
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;">
+        <div class="create-edit-matrix" style=" text-align: end;font-family: Arial, Helvetica, sans-serif">
           {{'Create/Edit Matrix'}}
         </div>
       </div>
@@ -143,10 +143,19 @@
                     {{'Image Uploader'}}
                 </div>
             </div> -->
-      <div *ngIf="!(userRole == 'Director')" [ngClass]="(isMenuActive11)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive11')">
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
-          {{'Survey Creation & Design'}}
+      <div *ngIf="!(userRole == 'Director')">
+        <div *ngIf="globalProjectName.length > 0; else noSave" [ngClass]="(isMenuActive11)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive11')">
+          <div class="link-bmx-creator">
+            {{'Survey Creation & Design'}}
+          </div>
         </div>
+        <ng-template #noSave>
+          <div [ngClass]="(isMenuActive11)?'menu-active':'menu-item'">
+            <div class="link-bmx-creator">
+              {{'Survey Creation & Design'}}
+            </div>
+          </div>
+        </ng-template>
       </div>
       <!-- <div [ngClass]="(isMenuActive12)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive12')">
                 <div
@@ -161,17 +170,17 @@
                 </div>
             </div> -->
       <div [ngClass]="(isMenuActive14)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive14')">
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
+        <div class="link-bmx-creator">
           {{'Participants'}}
         </div>
       </div>
       <div [ngClass]="(isMenuActive15)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive15')">
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
+        <div class="link-bmx-creator">
           {{'Survey Participants/Email'}}
         </div>
       </div>
       <div [ngClass]="(isMenuActive16)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive16')">
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
+        <div class="link-bmx-creator">
           {{'Reports'}}
         </div>
       </div>
@@ -236,7 +245,7 @@
 
   <!-- PROJECT INFORMATION  🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠-->
   <div class="project-info" *ngIf="isMenuActive8">
-    <app-project-information></app-project-information>
+    <app-project-information (saveProjectSuccess)="saveProject($event)"></app-project-information>
   </div>
   <!--🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠 END PROJECT INFORMATION-->
 
@@ -316,7 +325,7 @@
   <!--  SURVEY CREATION & DESIGN 🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿-->
   <div [ngClass]="bmxClientPageDesignMode?'page-design':'page-design-client'" *ngIf="isMenuActive11">
     <app-survey-creation-design [isBrandMatrixSurvey]="isBrandMatrixSurvey" [isMenuActive11]="isMenuActive11"
-      [bmxClientPageDesignMode]="bmxClientPageDesignMode" [bmxClientPageOverview]="bmxClientPageOverview">
+      [bmxClientPageDesignMode]="bmxClientPageDesignMode" [bmxClientPageOverview]="bmxClientPageOverview" [widthLogo]="widthTemporary">
     </app-survey-creation-design>
   </div>
   <!-- END 🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿🧿  SURVEY CREATION & DESIGN -->
