--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.scss
@@ -29,13 +29,15 @@
   }
 }
 
-
-
-.positive{
+.negative{
   color: #ed252f;
 }
-.negative{
+.positive{
   color: #00cd38;
+}
+
+.neutral{
+  color: #fffb07fd;
 }
 
 .active-rating-star {
@@ -523,3 +525,123 @@ input[type="range"]:focus::-ms-fill-upper {
     }
   }
 }
+
+.container-bar{
+  display: block;
+  width: 100%;
+  height: 20px;
+  color: #000!important;
+  background-color: #f1f1f1!important;
+  border-radius: 16px;
+  .bar-progress{
+    height: 20px;
+    border-radius: 16px;
+    color: #fff!important;
+    background-color: #2196F3!important;
+    padding: 0.01em 16px;
+  }
+}
+
+.modal-video {
+  /*display: block;  Hidden by default */
+  position: fixed; /* Stay in place */
+  top: -2%;
+  left: -6%;
+  z-index: 999; /* Sit on top */
+
+  width: 99vw; /* Full width */
+  height: 100vh; /* Full height */
+  overflow: hidden; /* Enable scroll if needed */
+  background-color: rgb(0 0 0 / 50%); /* Black w/ opacity */
+
+  /* Modal Content/Box */
+  .modal-content {
+      background-color: rgba(0, 0, 0, 0);    
+      margin: 2% auto; /* 15% from the top and centered */    
+       /* Could be more or less, depending on screen size */     
+      
+      .content-table{
+        width: 90%;
+        height: 90%;
+        overflow-y: scroll;
+        margin: 0 auto;
+      } 
+      
+      .content-button{
+        display: flex;
+        justify-content: end;
+        width: 90%;
+        margin: 0 auto;
+        padding: 2px;
+        background: white;       
+      }
+
+      .content-button-save{
+        display: flex;
+        justify-content: end;
+        width: 100%;
+        margin: 0 auto;
+        padding: 5px;
+        background: white;
+        button{
+          color: white;
+        }
+           
+      }
+  }    
+
+  .close-modal {
+      // margin-bottom: 5px;
+      position: relative;
+  
+      top: 12%;
+      left: 42.5%;
+      width: 15%;
+      padding: 0px 5px;
+      // margin-left: 36.5%;
+      color: #ffffff;
+      background-color: #ee7f24;
+      // float: right;
+      // font-size: 22px;
+      // font-weight: bold;
+      // text-align: center;
+      // height: 25px;
+      // border-radius: 5px;
+      transition: background-color 0.5s, color 0.5s;
+  }
+
+  .close-modal:hover,
+  .close-modal:focus {
+      background-color: #283e90;
+      color: white;
+      text-decoration: none;
+  }
+
+  .modal-content-add-row{
+    background-color: rgba(0, 0, 0, 0);    
+    margin: 2% auto; /* 15% from the top and centered */
+    width: 75%;
+    .example-form {
+      width: 100%;
+    }
+    
+    .example-full-width {
+      width: 100%;
+    }
+  }
+}
+
+table {
+  width: 100%;
+}
+
+.rankNumberActive {
+  min-width: 40px;
+  color: white;
+  background-color: #ee7f24;
+}
+.rankNumber {
+  min-width: 35px;
+  // background-color: greenyellow;
+}
+
