--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -235,7 +235,7 @@
     }
     .see-tutorial {
         bottom: 10px;
-        right: 98px;
+        right: 55px;
     }
     .container-checkbox {
         margin-left: 10%;
@@ -293,7 +293,8 @@
         margin: 1% auto;
         margin-left: auto;
         width: 55%;
-        // height: 50%;
+        // height: auto;
+        height: 50%;
         overflow-y: scroll;
         overflow-x: hidden;
     }
