--- a/src/app/bmx/bmx-creator/respondents/respondents.component.html
+++ b/src/app/bmx/bmx-creator/respondents/respondents.component.html
@@ -46,7 +46,7 @@
             <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
                 <!-- Position Column -->
                 <ng-container matColumnDef="FirstName">
-                    <th mat-header-cell *matHeaderCellDef  style="width: 15%;"> First Name </th>
+                    <th mat-header-cell *matHeaderCellDef style="width: 15%;"> First Name </th>
                     <td mat-cell *matCellDef="let element">
                         <input matInput placeholder="First Name " [value]="element.FirstName"
                             [(ngModel)]="element.FirstName" (focusout)="onFocusOutEvent($event)">
@@ -54,14 +54,14 @@
                 </ng-container>
 
                 <ng-container matColumnDef="LastName">
-                    <th mat-header-cell *matHeaderCellDef  style="width: 15%;"> Last Name </th>
+                    <th mat-header-cell *matHeaderCellDef style="width: 15%;"> Last Name </th>
                     <td mat-cell *matCellDef="let element">
                         <input matInput placeholder="Last Name" [value]="element.LastName"
                             [(ngModel)]="element.LastName" (focusout)="onFocusOutEvent($event)">
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="Email">
-                    <th mat-header-cell *matHeaderCellDef  style="width: 30%;"> Email </th>
+                    <th mat-header-cell *matHeaderCellDef style="width: 30%;"> Email </th>
                     <td mat-cell *matCellDef="let element">
                         <input matInput placeholder="Email" [value]="element.Email" [(ngModel)]="element.Email"
                             (focusout)="onFocusOutEvent($event)">
@@ -69,7 +69,7 @@
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="Type">
-                    <th mat-header-cell *matHeaderCellDef  style="width: 5%;"> Group </th>
+                    <th mat-header-cell *matHeaderCellDef style="width: 5%;"> Group </th>
                     <td mat-cell *matCellDef="let element">
                         <input matInput placeholder="" [value]="element.Type" [(ngModel)]="element.Type"
                             (focusout)="onFocusOutEvent($event)">
@@ -77,7 +77,7 @@
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="SubGroup">
-                    <th mat-header-cell *matHeaderCellDef  style="width: 5%;"> Subgroup </th>
+                    <th mat-header-cell *matHeaderCellDef style="width: 5%;"> Subgroup </th>
                     <td mat-cell *matCellDef="let element">
                         <input matInput placeholder="" [value]="element.SubGroup" [(ngModel)]="element.SubGroup"
                             (focusout)="onFocusOutEvent($event)">
@@ -85,18 +85,14 @@
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="AnswerWeight">
-                    <th mat-header-cell *matHeaderCellDef  style="width: 5%;"> Weight </th>
+                    <th mat-header-cell *matHeaderCellDef style="width: 5%;"> Weight </th>
                     <td mat-cell *matCellDef="let element">
                         <input matInput placeholder="" [value]="element.AnswerWeight" [(ngModel)]="element.AnswerWeight"
                             (focusout)="onFocusOutEvent($event)">
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="delete">
-                    <th mat-header-cell *matHeaderCellDef  style="width: 3.33%;">
-                        <button mat-icon-button style="color: #bc488a;"
-                        aria-label="Example icon button with a home icon" (click)="deletPart('all')">
-                        <mat-icon>delete</mat-icon>
-                    </button> </th>
+                    <th mat-header-cell *matHeaderCellDef style="width: 3.33%;"> </th>
                     <td mat-cell *matCellDef="let element">
                         <button mat-icon-button style="color: #bc488a;"
                             aria-label="Example icon button with a home icon" (click)="deletPart(element.FirstName)">
